src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Support_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Item</label>
        <referenceTo>maica_cc__Support_Item__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <description>Indicates if the Product is the Bucket, or Category Level, Product for the related Support
            Category
        </description>
        <formula>Id = Support_Category__r.Category_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the Product is the Bucket, or Category Level, Product for the related Support
            Category
        </inlineHelpText>
        <label>Bucket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Number__c</fullName>
        <formula>Support_Category__r.maica_cc__Category_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Types__c</fullName>
        <label>Claim Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maica_cc__Claim_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This represents a Product that is commonly used within Service Delivery so will be displayed as
            a priority in the NDIS Product Management console.
        </inlineHelpText>
        <label>Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Favourite_Item__c</fullName>
        <formula>IMAGE(IF(Favourite__c = TRUE, &quot;/resource/maica_cc__Maica_Images/star.png&quot;, &quot;/resource/maica_cc__Maica_Images/star_grey.png&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Favourite Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Indicates the Funding Source that the Support Category applies to.</description>
        <inlineHelpText>Indicates the Funding Source that the Support Category applies to. Determines what fields are
            displayed on the page.
        </inlineHelpText>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maica_cc__Funding_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Day__c</fullName>
        <label>Service Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <label>Service Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daytime</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Support Category associated with this Product.</description>
        <label>Support Category</label>
        <referenceTo>maica_cc__Support_Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Item_Number__c</fullName>
        <description>Unique NDIS Reference Number derived from Support Category, Sequence Number, Registration Group,
            Outcome Domain and Support Purpose
        </description>
        <externalId>true</externalId>
        <inlineHelpText>Unique NDIS Reference Number derived from Support Category, Sequence Number, Registration Group,
            Outcome Domain and Support Purpose
        </inlineHelpText>
        <label>Support Item Number</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Support_Item_Type__c</fullName>
        <label>Support Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price Limited Supports</fullName>
                </value>
                <value>
                    <fullName>Quotable Supports</fullName>
                </value>
                <value>
                    <fullName>Unit Price = $1</fullName>
                </value>
                <value>
                    <fullName>Deliverable Service</fullName>
                </value>
                <value>
                    <fullName>Basic Subsidy</fullName>
                </value>
                <value>
                    <fullName>Care Management Fee</fullName>
                </value>
                <value>
                    <fullName>Package Management Fee</fullName>
                </value>
                <value>
                    <fullName>Basic Daily Fee</fullName>
                </value>
                <value>
                    <fullName>Income Tested Fee</fullName>
                </value>
                <value>
                    <fullName>Veterans&apos; Supplement</fullName>
                </value>
                <value>
                    <fullName>Dementia and Cognition Supplement</fullName>
                </value>
                <value>
                    <fullName>Enteral Feeding Supplement</fullName>
                </value>
                <value>
                    <fullName>Oxygen Supplement</fullName>
                </value>
                <value>
                    <fullName>Top-Up Supplement</fullName>
                </value>
                <value>
                    <fullName>Hardship Supplement</fullName>
                </value>
                <value>
                    <fullName>Viability Supplement</fullName>
                </value>
                <value>
                    <fullName>Client Contribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Purpose__c</fullName>
        <formula>TEXT(Support_Category__r.maica_cc__Support_Purpose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Purpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACE_Support_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PACE Support Category</label>
        <referenceTo>maica_cc__Support_Category__c</referenceTo>
        <relationshipLabel>Products (PACE Support Category)</relationshipLabel>
        <relationshipName>Pace_Products</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>